syntax = "proto3";

                 package auditLogEntry;
service AuditLogEntryService {
 rpc createAuditLogEntry (AuditLogEntryCreateInput) returns (AuditLogEntry) {}
rpc auditLogEntries (findManyParams) returns (stream AuditLogEntry) {}
rpc auditLogEntry (AuditLogEntryWhereUniqueInput) returns (AuditLogEntry) {}
rpc updateAuditLogEntry (AuditLogEntryUpdateInput) returns (AuditLogEntry) {}
rpc deleteAuditLogEntry (AuditLogEntryWhereUniqueInput) returns (AuditLogEntry) {} 
 }
message AuditLogEntryCreateInput {
string createdAt = 1;
string id = 2;
string instanceId = 3;
string ipAddress = 4;
string payload = 5;
};
message AuditLogEntry {
string createdAt = 1;
string id = 2;
string instanceId = 3;
string ipAddress = 4;
string payload = 5;
};
message AuditLogEntryWhereUniqueInput {
string createdAt = 1;
string id = 2;
string instanceId = 3;
string ipAddress = 4;
string payload = 5;
};
message AuditLogEntryUpdateInput {
string createdAt = 1;
string id = 2;
string instanceId = 3;
string ipAddress = 4;
string payload = 5;
};
message findManyParams {

};